updated openapi spec and endpoints
