# app/models/todo_item.py
@@ -1,8 +1,9 @@
 from pydantic import BaseModel
+from typing import Union
 
 
 class TodoItem(BaseModel):
     id: int
     data: str
     completed: bool
-    completed_timestamp: int
+    completed_timestamp: Union[int, None]
